# texflash

./: .gitignore  README.md  import  pyproject.toml
src/importer/: anki_import.py  compile.py
src/importer/testibunti/: main.tex
src/importer/tex/: .fdb_latexmk  .fls  main.tex
src/parser/: models.py  parse.py
